--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,11 +11,20 @@
         android:label="@string/app_name" >
         <activity
             android:screenOrientation="landscape"
-            android:name=".activities.GameScreenActivity">
+            android:name=".activities.TitleActivity" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.GameLoadingActivity" 
+            android:screenOrientation="landscape" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">            
+        </activity>
+                <activity android:name=".activities.GameScreenActivity" 
+            android:screenOrientation="landscape" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">            
         </activity>
     </application>
 
